# argp-standalone

./: meson.build  meson_config.h.in
compat/: __vsnprintf_internal.c  meson.build
compat/config/: config.h.in  meson.build
compat/getopt/: getopt.c  getopt1.c  meson.build
compat/hdr/: argp.h  meson.build
compat/string/: mempcpy.h  meson.build  strcase.h  strcasecmp.c  strchrnul.c  strchrnul.h  strndup.h
compat/sysexits/: meson.build
compat/unistd/: meson.build
include/: meson.build
include/argp-standalone/: argp.h
src/: argp-fmtstream.h  meson.build
test/: ex1.c  meson.build
